k8s/manifests-4fbfaa/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-4fbfaa
  namespace: journee
  labels:
    app: journee-4fbfaa
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-4fbfaa
  template:
    metadata:
      labels:
        app: journee-4fbfaa
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-4fbfaa
          image: gcr.io/my-docker-471807/journee:v6.3.0
          ports:
            - containerPort: 3000
