k8s/manifests-4fbfaa/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-4fbfaa
  namespace: journee
spec:
  selector:
    app: journee-4fbfaa
  ports:
    - port: 80
      targetPort: 3000
